Fix large IDs overflowing (#816)

--- a/src/providers/Inspector/style.module.scss
+++ b/src/providers/Inspector/style.module.scss
@@ -16,5 +16,4 @@
 .record-input {
 	font-family: "JetBrains Mono";
 	font-size: 14px;
-	height: 42px;
 }
